WIP: buildNew.gradle